[gd_scene load_steps=3 format=3 uid="uid://ccyu0og8jl6jx"]

[ext_resource type="Texture2D" uid="uid://cma1kij8nf5dq" path="res://Assets/kenney_top-down-tanks-redux/PNG/Default size/bulletGreen1.png" id="1_7u3a6"]
[ext_resource type="Script" uid="uid://cham7baw74ove" path="res://Scenes/Bullet/Bullet.gd" id="1_jy0d1"]

[node name="Bullet" type="Node2D"]
script = ExtResource("1_jy0d1")

[node name="BulletSprite" type="Sprite2D" parent="."]
position = Vector2(16, 16)
texture = ExtResource("1_7u3a6")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
